Optimize HPACK indexed header lookup